// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassB tagged injections receives Extensions 1`] = `
Array [
  "Pass",
  "QRCode",
]
`;

exports[`PassB tagged injections receives FileFormats 1`] = `
Array [
  "FirstLineFileFormat",
  "PrefixFileFormat",
]
`;

exports[`PassB tagged injections receives Fillers 1`] = `
Array [
  "FillPasswordInputs",
]
`;

exports[`PassB tagged injections receives Matchers 1`] = `
Array [
  "FuzzaldrinMatcher",
]
`;
